<resources>
    <string name="app_name">TaskPro</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Sign up</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome Back!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="design">UI design items</string>
    <string name="forget_password">Forgot your Password?</string>
    <string name="signup_google">Sign Up with Google</string>
    <string name="signup_facebook">Sign Up with Facebook</string>
    <string name="login_new_user">Are you a new user? Register!</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="help_header">Help Header</string>
    <string name="help_search">Need Some Help?</string>
    <string name="help_search_placeholder">Search Something</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="faq1_header">How can I search for a specific task?</string>
    <string name="faq1_content">Use the app\'s search feature to find specific tasks by entering relevant keywords. The app will filter and display matching tasks.</string>
    <string name="faq2_header">How do I create a new task?</string>
    <string name="faq2_content">Click "New Task" or the "+" icon, fill in task details, and click "Save" to create a new task.</string>
    <string name="faq3_header">How do I share this app with friends?</string>
    <string name="faq3_content">Simply go to navigation menu and choose the share option item.</string>
    <string name="ppolicy_header">Privacy Policy</string>
    <string name="ppolicy_intro">We want you to know exactly how TaskPro services work and why we need your details. Reviewing our policy will help you to continue using the app with peace of mind.</string>
    <string name="view_more">View more about specific privacy policy</string>
    <string name="ppolicy1">What information do we collect about you?</string>
    <string name="ppolicy2">How do we use your information?</string>
    <string name="ppolicy3">To whom do we disclose your information?</string>
    <string name="ppolicy4">What do we do to keep your information secure?</string>
    <string name="ppolicy5">Cookies, beacons and Geo-tracking.</string>
    <string name="settings_header">Settings</string>
    <string name="settings_language">Choose Language</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_accounts">Accounts</string>
    <string name="settings_security">Privacy &amp; Security</string>
    <string name="settings_help_support">Help &amp; Support</string>
    <string name="settings_about">About</string>
    <string name="account_header">Account</string>
    <string name="default_notification_channel_id">channel_id</string>
    <string name="default_notification_channel_name">Notifications</string>
    <string name="add_task_button">Add Task Floating Action Button (FAB)</string>
    <string name="appwelcome">Welcome!</string>
    <string name="app_description">all on-one you need</string>
    <string name="title_create_account">Create \nAccount</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">Re-password</string>
    <string name="action_save">Save</string>
    <string name="label_time">Time</string>
    <string name="label_date">Date</string>
    <string name="hint_content">Content</string>
    <string name="hint_title">Title</string>
    <string name="prompt_message">Message</string>
    <string name="action_send_message">Send message</string>
    <string name="title_quick_contact">Quick contact</string>
    <string name="title_social_media">Social Media</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share">Share App</string>
    <string name="nav_help">Help</string>
    <string name="nav_account">Account</string>
    <string name="nav_about">About Us</string>
    <string name="nav_contact">Contact Us</string>
    <string name="nav_privacy">Privacy Policy</string>
    <string name="nav_logout">Logout</string>
    <string name="dialog_title_delete_task">Delete Task</string>
    <string name="dialog_message_delete_task">Are you sure you want to delete this task?</string>
    <string name="dialog_positive_button_delete_task">Delete</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="register_old_user">Already have an account? Sign In!</string>
    <string name="hint_current_email">Current Email</string>
    <string name="hint_new_email">New Email</string>
    <string name="hint_current_password" >Current Password</string>
    <string name="action_save_email">Save Email</string>
    <string name="label_privacy_policy">Effective from Nov 2024</string>
    <string name="dialog_change_password">Change Password</string>
    <string name="label_do_you_want_to_change_your_password">Do you want to change your password?</string>
    <string name="dialog_positive_button">Yes</string>
    <string name="toast_diary_saved_successfully">Diary saved successfully</string>
    <string name="toast_failed_to_save_diary">Failed to save diary</string>
    <string name="toast_please_select_a_date_in_the_future">Please select a date in the future</string>
    <string name="toast_please_fill_in_all_fields">Please fill in all fields</string>
    <string name="toast_invalid_email_address">Invalid email address</string>
    <string name="toast_message_sent_successfully">Message sent successfully</string>
    <string name="toast_error">"Error: "</string>
    <string name="toast_failed_to_retrieve_user_data">"Failed to retrieve user data: "</string>
    <string name="toast_logout_successfully">Logout Successfully!</string>
    <string name="title_delete_diary_entry">Delete Diary Entry</string>
    <string name="label_are_you_sure_you_want_to_delete_this_diary_entry">Are you sure you want to delete this diary entry?</string>
    <string name="toast_please_enter_both_title_date_and_time">Please enter both title, date and time</string>
    <string name="toast_content_should_not_exceed_3_lines_30_words">Content should not exceed 3 lines/30 words</string>
    <string name="toast_please_select_a_time_at_least_six_minutes_later">Please select a time at least six minutes later</string>
    <string name="state_not_logged_in">Not logged in!</string>
    <string name="toast_task_saved_successfully">Task saved successfully</string>
    <string name="toast_failed_to_save_task">"Failed to save task: "</string>
    <string name="toast_task_saved_locally_no_internet_connection">Task saved locally. No internet connection.</string>
    <string name="toast_verification_email_sent_please_check_your_email_to_complete_the_update">Verification email sent. Please check your email to complete the update.</string>
    <string name="toast_failed_to_send_verification_email_please_try_again">Failed to send verification email. Please try again.</string>
    <string name="toast_incorrect_password_please_try_again">Incorrect password. Please try again.</string>
    <string name="toast_no_internet_connection_please_check_your_network_settings">No internet connection. Please check your network settings.</string>
    <string name="error_email_is_required">Email is Required</string>
    <string name="error_password_is_required">Password is Required</string>
    <string name="state_login_successful">Login successful</string>
    <string name="state_login_failed_please_check_your_credentials">Login Failed. Please check your credentials</string>
    <string name="state_network_connection_available">Network connection available</string>
    <string name="state_no_internet_connection_please_check_your_network_settings">No internet connection. Please check your network settings.</string>
    <string name="toast_password_reset_email_sent_please_check_your_email">Password reset email sent. Please check your email.</string>
    <string name="toast_failed_to_send_password_reset_email_please_check_the_email_address">Failed to send password reset email. Please check the email address.</string>
    <string name="state_language_changed_to">"Language changed to: "</string>
    <string name="error_password_do_not_match">Password do not match</string>
    <string name="action_sign_up_successful">Sign-up successful</string>
    <string name="action_sign_up_failed">Sign-up Failed:</string>
    <string name="nav_diary">Diary</string>


</resources>