<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/nav_home"></item>
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/nav_diary"
            android:title="@string/nav_diary">
        </item>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/nav_settings"></item>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/nav_share"
            android:title="@string/nav_share"></item>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/nav_help"
            android:title="@string/nav_help"></item>
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/nav_account"
                android:title="@string/nav_account" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/nav_about"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/nav_contact"
                android:title="@string/nav_contact" />
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/nav_privacypolicy"
                android:title="@string/nav_privacy" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_logout"
                android:title="@string/nav_logout" />

        </menu>

    </item>

</menu>