<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleEditText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider10"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:background="@color/purple_500" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contentInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contentEditText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/hint_content"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minLines="2"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveButton4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/action_save"
        android:textSize="20sp" />
</LinearLayout>
