<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailEditActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">
            <ImageView
                android:background="@drawable/baseline_mail_outline_24"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="35dp"
                android:textColor="@color/purple"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="12dp">

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="start|top"
                    android:layout_weight="1"
                    android:paddingHorizontal="8dp"
                    android:text="@string/hint_current_email"
                    android:textColor="@color/muted_black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:paddingHorizontal="8dp"
                    android:text="user@email.com"
                    android:textSize="13sp"
                    android:textColor="@color/muted_black" />
            </LinearLayout>
            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_height="1dp"
                android:background="@color/purple_500" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="12dp">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="start|top"
                    android:layout_weight="1"
                    android:paddingHorizontal="8dp"
                    android:text="@string/hint_new_email"
                    android:textColor="@color/muted_black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:hint="user@email.com"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:paddingHorizontal="8dp"
                    android:textColor="@color/muted_black"
                    android:textSize="13sp" />

            </LinearLayout>
            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_height="1dp"
                android:background="@color/purple_500" />

            <LinearLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="12dp">

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="start|top"
                    android:layout_weight="1"
                    android:paddingHorizontal="8dp"
                    android:text="@string/hint_current_password"
                    android:textColor="@color/muted_black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingHorizontal="8dp"
                    android:textColor="@color/muted_black"
                    android:textSize="13sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelEmailButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/dialog_negative_button" />

                <Button
                    android:id="@+id/saveEmailButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action_save_email" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>